// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatternFlyTable component renders as expected 1`] = `
<div
  className="pattern-fly-table-group"
>
  <div
    className="pf-c-search-input"
  >
    <span
      className="pf-c-search-input__text"
    >
      <span
        className="pf-c-search-input__icon"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          />
        </svg>
      </span>
      <input
        aria-label="Search input"
        className="pf-c-search-input__text-input"
        onChange={[Function]}
        placeholder="Find"
        value=""
      />
    </span>
    
  </div>
  <div
    className="pattern-fly-table"
  >
    <table
      aria-label="Sortable Table"
      className="pf-c-table pf-m-grid-md"
      data-ouia-component-id="OUIA-Generated-Table-1"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe={true}
      role="grid"
    >
      <thead
        className="pattern-fly-table-header"
      >
        <tr>
          <th
            className=""
            data-key={0}
            data-label="Repositories"
            onMouseEnter={[Function]}
            scope="col"
          >
            Repositories
          </th>
          <th
            className=""
            data-key={1}
            data-label="Branches"
            onMouseEnter={[Function]}
            scope="col"
          >
            Branches
          </th>
          <th
            className=""
            data-key={2}
            data-label="Pull requests"
            onMouseEnter={[Function]}
            scope="col"
          >
            Pull requests
          </th>
          <th
            className=""
            data-key={3}
            data-label="Workspaces"
            onMouseEnter={[Function]}
            scope="col"
          >
            Workspaces
          </th>
          <th
            className=""
            data-key={4}
            data-label="Last Commit"
            onMouseEnter={[Function]}
            scope="col"
          >
            Last Commit
          </th>
        </tr>
      </thead>
      <tbody
        className="pattern-fly-table-body"
      >
        <tr
          className=""
          data-ouia-component-id="OUIA-Generated-TableRow-1"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe={true}
          hidden={false}
          onMouseDown={[Function]}
        >
          <td
            className=""
            data-key={0}
            data-label="Repositories"
            onMouseEnter={[Function]}
          >
            one
          </td>
          <td
            className=""
            data-key={1}
            data-label="Branches"
            onMouseEnter={[Function]}
          >
            two
          </td>
          <td
            className=""
            data-key={2}
            data-label="Pull requests"
            onMouseEnter={[Function]}
          >
            a
          </td>
          <td
            className=""
            data-key={3}
            data-label="Workspaces"
            onMouseEnter={[Function]}
          >
            four
          </td>
          <td
            className=""
            data-key={4}
            data-label="Last Commit"
            onMouseEnter={[Function]}
          >
            five
          </td>
        </tr>
        <tr
          className=""
          data-ouia-component-id="OUIA-Generated-TableRow-2"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe={true}
          hidden={false}
          onMouseDown={[Function]}
        >
          <td
            className=""
            data-key={0}
            data-label="Repositories"
            onMouseEnter={[Function]}
          >
            a
          </td>
          <td
            className=""
            data-key={1}
            data-label="Branches"
            onMouseEnter={[Function]}
          >
            two
          </td>
          <td
            className=""
            data-key={2}
            data-label="Pull requests"
            onMouseEnter={[Function]}
          >
            k
          </td>
          <td
            className=""
            data-key={3}
            data-label="Workspaces"
            onMouseEnter={[Function]}
          >
            four
          </td>
          <td
            className=""
            data-key={4}
            data-label="Last Commit"
            onMouseEnter={[Function]}
          >
            five
          </td>
        </tr>
        <tr
          className=""
          data-ouia-component-id="OUIA-Generated-TableRow-3"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe={true}
          hidden={false}
          onMouseDown={[Function]}
        >
          <td
            className=""
            data-key={0}
            data-label="Repositories"
            onMouseEnter={[Function]}
          >
            p
          </td>
          <td
            className=""
            data-key={1}
            data-label="Branches"
            onMouseEnter={[Function]}
          >
            two
          </td>
          <td
            className=""
            data-key={2}
            data-label="Pull requests"
            onMouseEnter={[Function]}
          >
            b
          </td>
          <td
            className=""
            data-key={3}
            data-label="Workspaces"
            onMouseEnter={[Function]}
          >
            four
          </td>
          <td
            className=""
            data-key={4}
            data-label="Last Commit"
            onMouseEnter={[Function]}
          >
            five
          </td>
        </tr>
      </tbody>
    </table>
    <div
      className="pf-c-pagination pf-m-bottom"
      data-ouia-component-id="OUIA-Generated-Pagination-bottom-1"
      data-ouia-component-type="PF4/Pagination"
      data-ouia-safe={true}
      id="pagination-options-menu-bottom-0"
    >
      <div
        className="pf-c-options-menu pf-m-top"
        data-ouia-component-type="PF4/PaginationOptionsMenu"
        data-ouia-safe={true}
      >
        <div
          className="pf-c-options-menu__toggle pf-m-plain pf-m-text"
        >
          <span
            className="pf-c-options-menu__toggle-text"
          >
            <b>
              1
               - 
              3
            </b>
             
            of 
            <b>
              3
            </b>
             
            
          </span>
          <button
            aria-expanded={false}
            aria-label="Items per page"
            className="  pf-c-options-menu__toggle-button"
            data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
            data-ouia-component-type="PF4/DropdownToggle"
            data-ouia-safe={true}
            disabled={false}
            id="pagination-options-menu-bottom-toggle-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className="pf-c-options-menu__toggle-button-icon"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <nav
        aria-label="Pagination"
        className="pf-c-pagination__nav"
      >
        <div
          className="pf-c-pagination__nav-control pf-m-first"
        >
          <button
            aria-disabled={true}
            aria-label="Go to first page"
            className="pf-c-button pf-m-plain pf-m-disabled"
            data-action="first"
            data-ouia-component-id="OUIA-Generated-Button-plain-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={true}
            onClick={[Function]}
            role={null}
            tabIndex={null}
            type="button"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
              />
            </svg>
          </button>
        </div>
        <div
          className="pf-c-pagination__nav-control"
        >
          <button
            aria-disabled={true}
            aria-label="Go to previous page"
            className="pf-c-button pf-m-plain pf-m-disabled"
            data-action="previous"
            data-ouia-component-id="OUIA-Generated-Button-plain-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={true}
            onClick={[Function]}
            role={null}
            tabIndex={null}
            type="button"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
              />
            </svg>
          </button>
        </div>
        <div
          className="pf-c-pagination__nav-page-select"
        >
          <input
            aria-label="Current page"
            className="pf-c-form-control"
            disabled={true}
            max={1}
            min={1}
            onChange={[Function]}
            onKeyDown={[Function]}
            type="number"
            value={1}
          />
          <span
            aria-hidden="true"
          >
            of 
            1
          </span>
        </div>
        <div
          className="pf-c-pagination__nav-control"
        >
          <button
            aria-disabled={true}
            aria-label="Go to next page"
            className="pf-c-button pf-m-plain pf-m-disabled"
            data-action="next"
            data-ouia-component-id="OUIA-Generated-Button-plain-3"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={true}
            onClick={[Function]}
            role={null}
            tabIndex={null}
            type="button"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </button>
        </div>
        <div
          className="pf-c-pagination__nav-control pf-m-last"
        >
          <button
            aria-disabled={true}
            aria-label="Go to last page"
            className="pf-c-button pf-m-plain pf-m-disabled"
            data-action="last"
            data-ouia-component-id="OUIA-Generated-Button-plain-4"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={true}
            onClick={[Function]}
            role={null}
            tabIndex={null}
            type="button"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
              />
            </svg>
          </button>
        </div>
      </nav>
    </div>
  </div>
</div>
`;

exports[`PatternFlyTable component renders empty state 1`] = `
<div
  className="pattern-fly-table-group"
>
  <div
    className="pf-c-search-input"
  >
    <span
      className="pf-c-search-input__text"
    >
      <span
        className="pf-c-search-input__icon"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          />
        </svg>
      </span>
      <input
        aria-label="Search input"
        className="pf-c-search-input__text-input"
        onChange={[Function]}
        placeholder="Find"
        value=""
      />
    </span>
    
  </div>
  <div
    className="pattern-fly-table"
  >
    <table
      aria-label="Sortable Table"
      className="pf-c-table pf-m-grid-md"
      data-ouia-component-id="OUIA-Generated-Table-2"
      data-ouia-component-type="PF4/Table"
      data-ouia-safe={true}
      role="grid"
    >
      <thead
        className="pattern-fly-table-header"
      >
        <tr>
          <th
            className=""
            data-key={0}
            data-label="Repositories"
            onMouseEnter={[Function]}
            scope="col"
          >
            Repositories
          </th>
          <th
            className=""
            data-key={1}
            data-label="Branches"
            onMouseEnter={[Function]}
            scope="col"
          >
            Branches
          </th>
          <th
            className=""
            data-key={2}
            data-label="Pull requests"
            onMouseEnter={[Function]}
            scope="col"
          >
            Pull requests
          </th>
          <th
            className=""
            data-key={3}
            data-label="Workspaces"
            onMouseEnter={[Function]}
            scope="col"
          >
            Workspaces
          </th>
          <th
            className=""
            data-key={4}
            data-label="Last Commit"
            onMouseEnter={[Function]}
            scope="col"
          >
            Last Commit
          </th>
        </tr>
      </thead>
      <tbody
        className="pattern-fly-table-body"
      />
    </table>
    <div
      className="pf-c-empty-state pf-m-sm pattern-fly-table-empty-state"
    >
      <div
        className="pf-c-empty-state__content"
      >
        <svg
          aria-hidden="true"
          aria-labelledby={null}
          className="pf-c-empty-state__icon"
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          />
        </svg>
        <h2
          className="pf-c-title pf-m-md"
        >
          No results found
        </h2>
      </div>
    </div>
    <div
      className="pf-c-pagination pf-m-bottom"
      data-ouia-component-id="OUIA-Generated-Pagination-bottom-2"
      data-ouia-component-type="PF4/Pagination"
      data-ouia-safe={true}
      id="pagination-options-menu-bottom-1"
    >
      <div
        className="pf-c-options-menu pf-m-top"
        data-ouia-component-type="PF4/PaginationOptionsMenu"
        data-ouia-safe={true}
      >
        <div
          className="pf-c-options-menu__toggle pf-m-plain pf-m-text"
        >
          <span
            className="pf-c-options-menu__toggle-text"
          >
            <b>
              0
               - 
              0
            </b>
             
            of 
            <b>
              0
            </b>
             
            
          </span>
          <button
            aria-expanded={false}
            aria-label="Items per page"
            className="  pf-c-options-menu__toggle-button"
            data-ouia-component-id="OUIA-Generated-DropdownToggle-2"
            data-ouia-component-type="PF4/DropdownToggle"
            data-ouia-safe={true}
            disabled={true}
            id="pagination-options-menu-bottom-toggle-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className="pf-c-options-menu__toggle-button-icon"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <nav
        aria-label="Pagination"
        className="pf-c-pagination__nav"
      >
        <div
          className="pf-c-pagination__nav-control pf-m-first"
        >
          <button
            aria-disabled={true}
            aria-label="Go to first page"
            className="pf-c-button pf-m-plain pf-m-disabled"
            data-action="first"
            data-ouia-component-id="OUIA-Generated-Button-plain-5"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={true}
            onClick={[Function]}
            role={null}
            tabIndex={null}
            type="button"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
              />
            </svg>
          </button>
        </div>
        <div
          className="pf-c-pagination__nav-control"
        >
          <button
            aria-disabled={true}
            aria-label="Go to previous page"
            className="pf-c-button pf-m-plain pf-m-disabled"
            data-action="previous"
            data-ouia-component-id="OUIA-Generated-Button-plain-6"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={true}
            onClick={[Function]}
            role={null}
            tabIndex={null}
            type="button"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
              />
            </svg>
          </button>
        </div>
        <div
          className="pf-c-pagination__nav-page-select"
        >
          <input
            aria-label="Current page"
            className="pf-c-form-control"
            disabled={true}
            max={0}
            min={1}
            onChange={[Function]}
            onKeyDown={[Function]}
            type="number"
            value={0}
          />
          <span
            aria-hidden="true"
          >
            of 
            0
          </span>
        </div>
        <div
          className="pf-c-pagination__nav-control"
        >
          <button
            aria-disabled={true}
            aria-label="Go to next page"
            className="pf-c-button pf-m-plain pf-m-disabled"
            data-action="next"
            data-ouia-component-id="OUIA-Generated-Button-plain-7"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={true}
            onClick={[Function]}
            role={null}
            tabIndex={null}
            type="button"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </button>
        </div>
        <div
          className="pf-c-pagination__nav-control pf-m-last"
        >
          <button
            aria-disabled={true}
            aria-label="Go to last page"
            className="pf-c-button pf-m-plain pf-m-disabled"
            data-action="last"
            data-ouia-component-id="OUIA-Generated-Button-plain-8"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={true}
            onClick={[Function]}
            role={null}
            tabIndex={null}
            type="button"
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
              />
            </svg>
          </button>
        </div>
      </nav>
    </div>
  </div>
</div>
`;

exports[`PatternFlyTable table sorting and filtering should filter text contained in React components with cells 1`] = `
Object {
  "itemCount": 1,
  "rows": Array [
    Object {
      "cells": Array [
        Object {
          "props": Object {
            "component": "th",
          },
          "title": <a
            href="#"
          >
            siemur/test-space1
          </a>,
        },
        Object {
          "title": <React.Fragment>
            <CodeBranchIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             10
          </React.Fragment>,
        },
        Object {
          "title": <React.Fragment>
            <CodeIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             4
          </React.Fragment>,
        },
        Object {
          "title": <a
            href="#"
          >
            Open in Github
          </a>,
        },
        Object {
          "title": "22 minutes",
        },
      ],
    },
  ],
}
`;

exports[`PatternFlyTable table sorting and filtering should filter text contained in React components without cells 1`] = `
Object {
  "itemCount": 1,
  "rows": Array [
    Array [
      Object {
        "props": Object {
          "component": "th",
        },
        "title": <a
          href="#"
        >
          siemur/test-space1
        </a>,
      },
      Object {
        "title": <React.Fragment>
          <CodeBranchIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
           10
        </React.Fragment>,
      },
      Object {
        "title": <React.Fragment>
          <CodeIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
           4
        </React.Fragment>,
      },
      Object {
        "title": <a
          href="#"
        >
          Open in Github
        </a>,
      },
      "22 minutes",
    ],
  ],
}
`;

exports[`PatternFlyTable table sorting and filtering should not move equivalent React/HTML rows while sorting column 4 1`] = `
Object {
  "itemCount": 3,
  "rows": Array [
    Object {
      "cells": Array [
        Object {
          "props": Object {
            "component": "th",
          },
          "title": <a
            href="#"
          >
            siemur/test-space3
          </a>,
        },
        Object {
          "title": <React.Fragment>
            <CodeBranchIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             7
          </React.Fragment>,
        },
        Object {
          "title": <React.Fragment>
            <CodeIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             4
          </React.Fragment>,
        },
        Object {
          "title": <a
            href="#"
          >
            Open in Github
          </a>,
        },
        Object {
          "title": "20 minutes",
        },
      ],
    },
    Object {
      "cells": Array [
        Object {
          "props": Object {
            "component": "th",
          },
          "title": <a
            href="#"
          >
            siemur/test-space1
          </a>,
        },
        Object {
          "title": <React.Fragment>
            <CodeBranchIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             10
          </React.Fragment>,
        },
        Object {
          "title": <React.Fragment>
            <CodeIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             4
          </React.Fragment>,
        },
        Object {
          "title": <a
            href="#"
          >
            Open in Github
          </a>,
        },
        Object {
          "title": "22 minutes",
        },
      ],
    },
    Object {
      "cells": Array [
        Object {
          "props": Object {
            "component": "th",
          },
          "title": <a
            href="#"
          >
            siemur/test-space2
          </a>,
        },
        Object {
          "title": <React.Fragment>
            <CodeBranchIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             3
          </React.Fragment>,
        },
        Object {
          "title": <React.Fragment>
            <CodeIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             4
          </React.Fragment>,
        },
        Object {
          "title": <a
            href="#"
          >
            Open in Github
          </a>,
        },
        Object {
          "title": "21 minutes",
        },
      ],
    },
  ],
}
`;

exports[`PatternFlyTable table sorting and filtering should not move equivalent string rows while sorting column 4 1`] = `
Object {
  "itemCount": 12,
  "rows": Array [
    Array [
      "one",
      "two",
      "a",
      "four",
      "one",
    ],
    Array [
      "a",
      "two",
      "k",
      "four",
      "two",
    ],
    Array [
      "p",
      "two",
      "b",
      "four",
      "three",
    ],
    Array [
      "one",
      "two",
      "a",
      "four",
      "four",
    ],
    Array [
      "a",
      "two",
      "k",
      "four",
      "five",
    ],
    Array [
      "p",
      "two",
      "b",
      "four",
      "six",
    ],
    Array [
      "one",
      "two",
      "a",
      "four",
      "seven",
    ],
    Array [
      "a",
      "two",
      "k",
      "four",
      "eight",
    ],
    Array [
      "p",
      "two",
      "b",
      "four",
      "nine",
    ],
    Array [
      "one",
      "two",
      "a",
      "four",
      "ten",
    ],
    Array [
      "a",
      "two",
      "k",
      "four",
      "eleven",
    ],
    Array [
      "p",
      "two",
      "b",
      "four",
      "twelve",
    ],
  ],
}
`;

exports[`PatternFlyTable table sorting and filtering should return expected values given existent filter for string values 1`] = `
Object {
  "itemCount": 4,
  "rows": Array [
    Array [
      "p",
      "two",
      "b",
      "four",
      "three",
    ],
    Array [
      "p",
      "two",
      "b",
      "four",
      "six",
    ],
    Array [
      "p",
      "two",
      "b",
      "four",
      "nine",
    ],
    Array [
      "p",
      "two",
      "b",
      "four",
      "twelve",
    ],
  ],
}
`;

exports[`PatternFlyTable table sorting and filtering should sort rows by ascending React/HTML in column 1 1`] = `
Object {
  "itemCount": 3,
  "rows": Array [
    Object {
      "cells": Array [
        Object {
          "props": Object {
            "component": "th",
          },
          "title": <a
            href="#"
          >
            siemur/test-space1
          </a>,
        },
        Object {
          "title": <React.Fragment>
            <CodeBranchIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             10
          </React.Fragment>,
        },
        Object {
          "title": <React.Fragment>
            <CodeIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             4
          </React.Fragment>,
        },
        Object {
          "title": <a
            href="#"
          >
            Open in Github
          </a>,
        },
        Object {
          "title": "22 minutes",
        },
      ],
    },
    Object {
      "cells": Array [
        Object {
          "props": Object {
            "component": "th",
          },
          "title": <a
            href="#"
          >
            siemur/test-space2
          </a>,
        },
        Object {
          "title": <React.Fragment>
            <CodeBranchIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             3
          </React.Fragment>,
        },
        Object {
          "title": <React.Fragment>
            <CodeIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             4
          </React.Fragment>,
        },
        Object {
          "title": <a
            href="#"
          >
            Open in Github
          </a>,
        },
        Object {
          "title": "21 minutes",
        },
      ],
    },
    Object {
      "cells": Array [
        Object {
          "props": Object {
            "component": "th",
          },
          "title": <a
            href="#"
          >
            siemur/test-space3
          </a>,
        },
        Object {
          "title": <React.Fragment>
            <CodeBranchIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             7
          </React.Fragment>,
        },
        Object {
          "title": <React.Fragment>
            <CodeIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             4
          </React.Fragment>,
        },
        Object {
          "title": <a
            href="#"
          >
            Open in Github
          </a>,
        },
        Object {
          "title": "20 minutes",
        },
      ],
    },
  ],
}
`;

exports[`PatternFlyTable table sorting and filtering should sort rows by ascending strings in column 5 1`] = `
Object {
  "itemCount": 12,
  "rows": Array [
    Array [
      "a",
      "two",
      "k",
      "four",
      "eight",
    ],
    Array [
      "a",
      "two",
      "k",
      "four",
      "eleven",
    ],
    Array [
      "a",
      "two",
      "k",
      "four",
      "five",
    ],
    Array [
      "one",
      "two",
      "a",
      "four",
      "four",
    ],
    Array [
      "p",
      "two",
      "b",
      "four",
      "nine",
    ],
    Array [
      "one",
      "two",
      "a",
      "four",
      "one",
    ],
    Array [
      "one",
      "two",
      "a",
      "four",
      "seven",
    ],
    Array [
      "p",
      "two",
      "b",
      "four",
      "six",
    ],
    Array [
      "one",
      "two",
      "a",
      "four",
      "ten",
    ],
    Array [
      "p",
      "two",
      "b",
      "four",
      "three",
    ],
    Array [
      "p",
      "two",
      "b",
      "four",
      "twelve",
    ],
    Array [
      "a",
      "two",
      "k",
      "four",
      "two",
    ],
  ],
}
`;

exports[`PatternFlyTable table sorting and filtering should sort rows by ascending strings in mixed table in column 5 1`] = `
Object {
  "itemCount": 3,
  "rows": Array [
    Object {
      "cells": Array [
        Object {
          "props": Object {
            "component": "th",
          },
          "title": <a
            href="#"
          >
            siemur/test-space3
          </a>,
        },
        Object {
          "title": <React.Fragment>
            <CodeBranchIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             7
          </React.Fragment>,
        },
        Object {
          "title": <React.Fragment>
            <CodeIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             4
          </React.Fragment>,
        },
        Object {
          "title": <a
            href="#"
          >
            Open in Github
          </a>,
        },
        Object {
          "title": "20 minutes",
        },
      ],
    },
    Object {
      "cells": Array [
        Object {
          "props": Object {
            "component": "th",
          },
          "title": <a
            href="#"
          >
            siemur/test-space2
          </a>,
        },
        Object {
          "title": <React.Fragment>
            <CodeBranchIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             3
          </React.Fragment>,
        },
        Object {
          "title": <React.Fragment>
            <CodeIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             4
          </React.Fragment>,
        },
        Object {
          "title": <a
            href="#"
          >
            Open in Github
          </a>,
        },
        Object {
          "title": "21 minutes",
        },
      ],
    },
    Object {
      "cells": Array [
        Object {
          "props": Object {
            "component": "th",
          },
          "title": <a
            href="#"
          >
            siemur/test-space1
          </a>,
        },
        Object {
          "title": <React.Fragment>
            <CodeBranchIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             10
          </React.Fragment>,
        },
        Object {
          "title": <React.Fragment>
            <CodeIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             4
          </React.Fragment>,
        },
        Object {
          "title": <a
            href="#"
          >
            Open in Github
          </a>,
        },
        Object {
          "title": "22 minutes",
        },
      ],
    },
  ],
}
`;

exports[`PatternFlyTable table sorting and filtering should sort rows by descending React/HTML in column 1 1`] = `
Object {
  "itemCount": 3,
  "rows": Array [
    Object {
      "cells": Array [
        Object {
          "props": Object {
            "component": "th",
          },
          "title": <a
            href="#"
          >
            siemur/test-space3
          </a>,
        },
        Object {
          "title": <React.Fragment>
            <CodeBranchIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             7
          </React.Fragment>,
        },
        Object {
          "title": <React.Fragment>
            <CodeIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             4
          </React.Fragment>,
        },
        Object {
          "title": <a
            href="#"
          >
            Open in Github
          </a>,
        },
        Object {
          "title": "20 minutes",
        },
      ],
    },
    Object {
      "cells": Array [
        Object {
          "props": Object {
            "component": "th",
          },
          "title": <a
            href="#"
          >
            siemur/test-space2
          </a>,
        },
        Object {
          "title": <React.Fragment>
            <CodeBranchIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             3
          </React.Fragment>,
        },
        Object {
          "title": <React.Fragment>
            <CodeIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             4
          </React.Fragment>,
        },
        Object {
          "title": <a
            href="#"
          >
            Open in Github
          </a>,
        },
        Object {
          "title": "21 minutes",
        },
      ],
    },
    Object {
      "cells": Array [
        Object {
          "props": Object {
            "component": "th",
          },
          "title": <a
            href="#"
          >
            siemur/test-space1
          </a>,
        },
        Object {
          "title": <React.Fragment>
            <CodeBranchIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             10
          </React.Fragment>,
        },
        Object {
          "title": <React.Fragment>
            <CodeIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
             4
          </React.Fragment>,
        },
        Object {
          "title": <a
            href="#"
          >
            Open in Github
          </a>,
        },
        Object {
          "title": "22 minutes",
        },
      ],
    },
  ],
}
`;

exports[`PatternFlyTable table sorting and filtering should sort rows by descending strings in column 5 1`] = `
Object {
  "itemCount": 12,
  "rows": Array [
    Array [
      "a",
      "two",
      "k",
      "four",
      "two",
    ],
    Array [
      "p",
      "two",
      "b",
      "four",
      "twelve",
    ],
    Array [
      "p",
      "two",
      "b",
      "four",
      "three",
    ],
    Array [
      "one",
      "two",
      "a",
      "four",
      "ten",
    ],
    Array [
      "p",
      "two",
      "b",
      "four",
      "six",
    ],
    Array [
      "one",
      "two",
      "a",
      "four",
      "seven",
    ],
    Array [
      "one",
      "two",
      "a",
      "four",
      "one",
    ],
    Array [
      "p",
      "two",
      "b",
      "four",
      "nine",
    ],
    Array [
      "one",
      "two",
      "a",
      "four",
      "four",
    ],
    Array [
      "a",
      "two",
      "k",
      "four",
      "five",
    ],
    Array [
      "a",
      "two",
      "k",
      "four",
      "eleven",
    ],
    Array [
      "a",
      "two",
      "k",
      "four",
      "eight",
    ],
  ],
}
`;
